force-app/main/default/objects/X7S_Adventure_Setting__mdt/X7S_Adventure_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Part of the Learning Adventure accelerator from 7Summits.</description>
    <label>7S Adventure Setting</label>
    <pluralLabel>7S Adventure Settings</pluralLabel>
</CustomObject>