force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Adventure_Admin_Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Admin_Permission_Name__c</fullName>
    <defaultValue>&quot;x7s_Adventure_Admin&quot;</defaultValue>
    <label>Adventure Admin Permission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>