force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Enable_Checkbox_Display__c.field-meta.xml
<CustomField>
    <fullName>Enable_Checkbox_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Checkbox Display</label>
    <type>Checkbox</type>
</CustomField>