force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Enable_New_Task_Flag__c.field-meta.xml
<CustomField>
    <fullName>Enable_New_Task_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable New Task Flag</label>
    <type>Checkbox</type>
</CustomField>