force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Full_Clone_Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Full_Clone_Error_Text__c</fullName>
    <defaultValue>&quot;Adventure was not successfully cloned. Please check debug logs.&quot;</defaultValue>
    <label>Full Clone Error Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>