force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Full_Clone_Success_Text__c.field-meta.xml
<CustomField>
    <fullName>Full_Clone_Success_Text__c</fullName>
    <defaultValue>&quot;Adventure and all related child records successfully cloned.&quot;</defaultValue>
    <label>Full Clone Success Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>