force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/No_Assigned_Tasks_Text__c.field-meta.xml
<CustomField>
    <fullName>No_Assigned_Tasks_Text__c</fullName>
    <defaultValue>&quot;You have no assigned tasks in this area.&quot;</defaultValue>
    <label>No Assigned Tasks Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>