force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/No_Module_Tasks__c.field-meta.xml
<CustomField>
    <fullName>No_Module_Tasks__c</fullName>
    <label>No Module Tasks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>