force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Override_Action_Color__c.field-meta.xml
<CustomField>
    <fullName>Override_Action_Color__c</fullName>
    <description>To override the default action color. Leave blank to use default.</description>
    <inlineHelpText>To override the default action color. Leave blank to use default.</inlineHelpText>
    <label>Override Action Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>