force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Restrict_View_of_Assigned_Adventures__c.field-meta.xml
<CustomField>
    <fullName>Restrict_View_of_Assigned_Adventures__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Restrict View of Assigned Adventures</label>
    <type>Checkbox</type>
</CustomField>