force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Task_Completion_Checked_Text__c.field-meta.xml
<CustomField>
    <fullName>Task_Completion_Checked_Text__c</fullName>
    <description>If populated, show text as toast notification to user. If blank, don&apos;t show a toast notification</description>
    <label>Task Completion Checked Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>