force-app/main/default/objects/X7S_Adventure_Setting__mdt/fields/Tasks_Completed_Text__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Completed_Text__c</fullName>
    <description>Text to display if all the users Tasks have been completed</description>
    <inlineHelpText>Text to display if all the users Tasks have been completed</inlineHelpText>
    <label>Tasks Completed Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>